--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,8 @@
+#container-fluid {
+    margin-left: auto;
+    margin-right: : auto;
+}
+
 #header {
     display: block;
     background-color: #ccc;
@@ -5,14 +10,15 @@
 }
 
 .photo {
-    height: 70px;
-    width: 70px;
+    height: 50px;
+    width: 50px;
     background-color: #ccc;
-    border-radius: 35px;
+    border-radius: 25px;
 }
 
 #users {
     display: block;
+    width: 100%;
 
 
 }
@@ -20,7 +26,8 @@
 #users li {
     display: inline;
     float: left;
-     margin-right: 30px;
+    margin-right: 30px;
+
 }
 
 .points {
@@ -91,10 +98,72 @@ width: 100px:
     margin-bottom: 40px;
 }
 
+.buttons {
+    width: 100%;
+}
+ 
+.register-container{
+    background: url("../img/bg.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 
 
+}
+
+#register-box {
+    width: 40%;
+
+    
+    background-color: #ffffff;
+    /*opacity: 0.5;*/
+    position: relative;
+    margin-top: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 3px;
+
+   
+
+}
+
+.register-form{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 40px;
+    
+}
+
+.toggle {
+    background-color: #39E09B;
+    width: 100%;
+    height: 50px;
+
+}
 
 
+/*Team nav-panel*/
+
+.nav-panel ul {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: lighter;
+     
+
+
+}
+
+.nav-panel li {
+    
+    
+    list-style: none;  
+}
+
+label {
+    font-weight: 400;
+}
 
 
 
